--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
+automium==0.2.6
+automium-web==0.1.1
 dj-database-url==0.4.0
 Django==1.9.2
+django-braces==1.8.1
+django-filter==0.13.0
+django-markdown==0.8.4
+django-oauth-toolkit==0.10.0
+djangorestframework==3.3.3
+Flask==0.10.1
 gunicorn==19.4.5
+itsdangerous==0.24
+Jinja2==2.8
+legacy==0.1.5
+Markdown==2.6.5
+MarkupSafe==0.23
+oauthlib==1.0.3
+Pillow==3.1.1
 psycopg2==2.6.1
+six==1.10.0
+Werkzeug==0.11.4
+wheel==0.26.0
 whitenoise==2.0.6
